# haskell-pong

./: CHANGELOG.md  LICENSE  README.md  haskell-pong.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/: Actor.hs  Component.hs  Drawable.hs  Game.hs  Math.hs
src/Actor/: Ball.hs  Paddle.hs
src/Actors/: Actor.hs  Ball.hs  Paddle.hs  Types.hs
src/Component/: DrawComponent.hs
src/Components/: Component.hs  DrawComponent.hs
src/Game/: Config.hs  InitSDL.hs  Initialize.hs  State.hs  StateManagement.hs
