cabal-version:      3.0
name:               haskell-pong
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             bernborgess
maintainer:         bernborgess@outlook.com
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Game
    -- other-modules:
                      Game.Initialize
                      Game.State
                      Game.Config
                      Actors.Types
                      Actors.Ball
                      Actors.Paddle

    -- To read the internal docs pass all the above to "exposed-modules" instead
    -- and run `cabal haddock --haddock-all`

    build-depends:    base ^>=4.17.2.1,
                      sdl2 ^>=2.5.5.0,
                      linear,
                      text^>=1.2.5.0,
                      mtl ^>= 2.2.2,
                      random ^>= 1.2.1.1

    hs-source-dirs:   src

    default-language: Haskell2010

executable haskell-pong
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base ^>=4.17.2.1,
                      sdl2 ^>=2.5.5.0,
                      linear,
                      text^>=1.2.5.0,
                      mtl ^>= 2.2.2,
                      random ^>= 1.2.1.1,
                      haskell-pong
    default-language: Haskell2010
