cabal-version:      3.0
name:               haskell-pong
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             bernborgess
maintainer:         bernborgess@outlook.com
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
synopsis:           A Pong clone implemented in Haskell using SDL2
description:        A classic Pong game implementation featuring SDL2-based graphics, sound effects, and game state management using modern Haskell.
tested-with:        GHC ==9.4.8
source-repository head
  type:     git
  location: https://github.com/bernborgess/haskell-pong
  subdir:   .

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Game
    -- other-modules:
                      Game.State
                      Components.DrawComponent
                      Actors.Types
                      Actors.Ball
                      Actors.Paddle

    -- To read the internal docs pass all the above to "exposed-modules" instead
    -- and run `cabal haddock --haddock-all`

    build-depends:    base ^>=4.17.2.1,
                      sdl2 ^>=2.5.5.0,
                      linear ^>=1.23.1,
                      text^>=1.2.5.0,
                      mtl ^>= 2.2.2,
                      random ^>= 1.2.1.1

    hs-source-dirs:   src

    default-language: Haskell2010

executable haskell-pong
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base ^>=4.17.2.1,
                      sdl2 ^>=2.5.5.0,
                      linear ^>=1.23.1,
                      text^>=1.2.5.0,
                      mtl ^>= 2.2.2,
                      random ^>= 1.2.1.1,
                      haskell-pong
    default-language: Haskell2010
